# rsgentidal

./: .gitignore  .openapi-generator-ignore  Cargo.toml  LICENSE  README.md
.github/workflows/: test.yml
.openapi-generator/: FILES
docs/: AddPayload.md  AlbumCoverArtRelationshipUpdateOperationPayload.md  AlbumCoverArtRelationshipUpdateOperationPayloadData.md  AlbumCreateOperationPayload.md  AlbumCreateOperationPayloadData.md  AlbumCreateOperationPayloadDataAttributes.md  AlbumCreateOperationPayloadDataRelationships.md  AlbumCreateOperationPayloadDataRelationshipsArtists.md  AlbumCreateOperationPayloadDataRelationshipsArtistsData.md  AlbumCreateOperationPayloadDataRelationshipsGenres.md  AlbumCreateOperationPayloadDataRelationshipsGenresData.md  AlbumItemsRelationshipUpdateOperationPayload.md  AlbumItemsRelationshipUpdateOperationPayloadData.md  AlbumItemsRelationshipUpdateOperationPayloadMeta.md  AlbumUpdateOperationPayload.md  AlbumUpdateOperationPayloadData.md  AlbumUpdateOperationPayloadDataAttributes.md  AlbumUpdateOperationPayloadDataRelationships.md  AlbumUpdateOperationPayloadDataRelationshipsGenres.md  AlbumUpdateOperationPayloadDataRelationshipsGenresData.md  AlbumsApi.md  AlbumsAttributes.md  AlbumsItemsMultiRelationshipDataDocument.md  AlbumsItemsResourceIdentifier.md  AlbumsItemsResourceIdentifierMeta.md  AlbumsMultiRelationshipDataDocument.md  AlbumsMultiResourceDataDocument.md  AlbumsRelationships.md  AlbumsResourceObject.md  AlbumsSingleRelationshipDataDocument.md  AlbumsSingleResourceDataDocument.md  AlbumsSuggestedCoverArtsMultiRelationshipDataDocument.md  AlbumsSuggestedCoverArtsResourceIdentifier.md  AlbumsSuggestedCoverArtsResourceIdentifierMeta.md  AppreciationsApi.md  AppreciationsAttributes.md  AppreciationsCreateOperationMeta.md  AppreciationsCreateOperationPayload.md  AppreciationsCreateOperationPayloadData.md  AppreciationsCreateOperationPayloadDataRelationships.md  (+448 more)
spec/: LICENSE  tidal-api-oas.json
src/: auth_provider.rs  client.rs  lib.rs
src/apis/: albums_api.rs  appreciations_api.rs  artist_biographies_api.rs  artist_claims_api.rs  artists_api.rs  (+29 more)
(+457 files in other folders)
