[package]
name = "prawn"
version = "0.0.2"
authors = ["Kyle Hiller", "OpenAPI Generator team and contributors"]
description = "Rust Client for the Tidal API providing comprehensive API coverag, and easy OAuth management"
license = "MIT"
edition = "2021"
readme  = "README.md"
repository = "https://github.com/khreezy/prawn"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_repr = "^0.1"
serde_path_to_error = "^0.1"
url = "^2.5"
uuid = { version = "^1.8", features = ["serde", "v4"] }
async-trait = "^0.1"
reqwest = { version = "^0.12", default-features = false, features = ["json", "multipart", "stream"] }
reqwest-middleware = { version = "^0.4", features = ["json", "multipart"] }
oauth2 =  "5.0.0"
chrono = "0.4.38"
[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
internal = []

[dev-dependencies]
smol = "2.0.2"
httptest = "0.16.4"
tokio = { version =  "1.49.0", features = ["full"]}
